monitoring/20_grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-nginx-ingress
  namespace: monitoring
  annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  #tls:
  #  - hosts:
  #      - 'pi'
  #      secretName: pi-secret
  rules:
  - host: pi
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
